<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    android:baselineAligned="true"
    android:rowCount="13"
    android:columnCount="5"
    android:background="#3399ff"
    android:useDefaultMargins="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Fill Out your Invite!"
        android:id="@+id/textView5"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="5"
        android:textSize="40dp"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Who"
        android:id="@+id/textView"
        android:layout_column="0"
        android:textAlignment="textEnd"
        android:padding="5dp"
        android:layout_gravity="bottom"
        android:textColor="#000000"
        android:layout_row="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="What"
        android:id="@+id/textView2"
        android:layout_column="0"
        android:padding="5dp"
        android:textAlignment="textEnd"
        android:layout_gravity="bottom"
        android:textColor="#000000"
        android:layout_row="3" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/whatEditText"
        android:layout_column="1"
        android:layout_row="3"
        android:layout_columnSpan="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Where"
        android:id="@+id/textView3"
        android:layout_column="0"
        android:padding="5dp"
        android:textAlignment="textEnd"
        android:layout_gravity="bottom"
        android:textColor="#000000"
        android:layout_row="4" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/whereEditText"
        android:layout_column="1"
        android:layout_row="4"
        android:layout_columnSpan="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="When"
        android:id="@+id/textView4"
        android:layout_column="0"
        android:padding="5dp"
        android:textAlignment="textEnd"
        android:layout_gravity="bottom"
        android:textColor="#000000"
        android:layout_row="5" />

    <TextView
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/dateEditText"
        android:layout_column="1"
        android:hint="Date"
        android:clickable="true"
        android:layout_row="5"
        android:layout_columnSpan="4"
        android:padding="5dp"
        android:layout_gravity="center_vertical"
        android:onClick="dateFieldClicked" />

    <TextView
        android:layout_width="260dp"
        android:layout_height="28dp"
        android:ems="10"
        android:id="@+id/timeEditText"
        android:layout_column="1"
        android:hint="Time"
        android:layout_row="6"
        android:layout_columnSpan="4"
        android:onClick="timeFieldClicked"
        android:contextClickable="false"
        android:clickable="true"
        android:singleLine="false"
        android:textIsSelectable="false"
        android:padding="5dp"
        android:layout_gravity="center_vertical" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="7"
        android:layout_columnSpan="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Restrictions"
            android:id="@+id/textView7"
            android:layout_column="7"
            android:padding="5dp"
            android:textAlignment="textEnd"
            android:textColor="#000000"
            android:layout_gravity="bottom" />

        <Button
            android:layout_width="30dp"
            android:layout_height="43dp"
            android:text="\?"
            android:id="@+id/restrictionsButton"
            android:elegantTextHeight="true"
            android:clickable="true"
            android:onClick="restrictionsHintButtonClicked" />
    </LinearLayout>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/restrictionsEditText"
        android:layout_column="3"
        android:layout_row="7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Gift Ideas"
        android:id="@+id/textView6"
        android:layout_column="0"
        android:padding="5dp"
        android:textAlignment="textEnd"
        android:layout_gravity="center_vertical|bottom"
        android:textColor="#000000"
        android:layout_row="8" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/giftIdeasEditText"
        android:layout_column="1"
        android:layout_row="8"
        android:layout_columnSpan="4" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/whoEditText"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_columnSpan="4" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Request RSVP?"
        android:id="@+id/requestRSVPToggleButton"
        android:layout_column="1"
        android:checked="false"
        android:textSize="30dp"
        android:textOff="Request RSVP?"
        android:textOn="Request RSVP?"
        android:layout_row="9"
        android:layout_columnSpan="3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send"
        android:id="@+id/sendInvitebutton"
        android:layout_row="12"
        android:textSize="30dp"
        android:layout_column="3"
        android:onClick="sendInviteButtonClicked" />

</GridLayout>